--- a/Module-2/DI/DIContainer/Di.Impl/Di.csproj
+++ b/Module-2/DI/DIContainer/Di.Impl/Di.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>Di</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Reflection.Emit.ILGeneration" Version="4.7.0" />
+    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
