--- a/Module-2/DI/DIContainer/DIContainer/DIContainer.csproj
+++ b/Module-2/DI/DIContainer/DIContainer/DIContainer.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoreProject\CoreProject.csproj" />
+    <ProjectReference Include="..\Di.Impl\Di.csproj" />
+  </ItemGroup>
+
 </Project>
