--- a/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher.csproj
+++ b/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher.csproj
@@ -14,6 +14,30 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Properties\Resource.RU.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resource.RU.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Resources.EN.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.EN.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resource.RU.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.RU.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\Resources.EN.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.EN.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
