Add listening logic, localization, and configuration.

--- a/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher.csproj
+++ b/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher.csproj
@@ -14,6 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Properties\Resource.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Resource.RU.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -27,6 +32,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Properties\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Properties\Resource.RU.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.RU.Designer.cs</LastGenOutput>
