--- a/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/appsettings.json
+++ b/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/appsettings.json
@@ -1,5 +1,27 @@
 ﻿{
   "AppSettings": {
-    "Localization": "ru"
+    "Localization": "en-US",
+    "ListeningFolders": [
+      "C:\\Test"
+    ],
+    "DefaultPath": "C:\\Test\\Default",
+    "Rules": [
+      {
+        "DestinationPath": "",
+        "Pattern": "/[New]/",
+        "ModifyRule": {
+          "IsOrderNumberAdd": true,
+          "IsDateAdded": true
+        }
+      },
+      {
+        "DestinationPath": "",
+        "Pattern": "/[bar]/",
+        "ModifyRule": {
+          "IsOrderNumberAdd": false,
+          "IsDateAdded": false
+        }
+      }
+    ]
   }
 }
