--- a/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/appsettings.json
+++ b/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/appsettings.json
@@ -1,22 +1,22 @@
 ﻿{
   "AppSettings": {
-    "Localization": "en-US",
+    "Localization": "ru-RU",
     "ListeningFolders": [
-      "C:\\Test"
+      "D:\\Test"
     ],
-    "DefaultPath": "C:\\Test\\Default",
+    "DefaultPath": "D:\\Test\\Default",
     "Rules": [
       {
-        "DestinationPath": "",
-        "Pattern": "/[New]/",
+        "DestinationPath": "D:\\Test\\Rule_1",
+        "Pattern": "New",
         "ModifyRule": {
           "IsOrderNumberAdd": true,
           "IsDateAdded": true
         }
       },
       {
-        "DestinationPath": "",
-        "Pattern": "/[bar]/",
+        "DestinationPath": "D:\\Test\\Rule_2",
+        "Pattern": "bar",
         "ModifyRule": {
           "IsOrderNumberAdd": false,
           "IsDateAdded": false
