--- a/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess.Contract/OrderManagement.DataAccess.Contract.csproj
+++ b/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess.Contract/OrderManagement.DataAccess.Contract.csproj
@@ -41,8 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\OptionalFieldAttribute.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Models\Ordere.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\OrderDetail.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Supplier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
