move repos code in abstract repo, add interface for order service layer, move sql to resources.

--- a/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess.Contract/OrderManagement.DataAccess.Contract.csproj
+++ b/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess.Contract/OrderManagement.DataAccess.Contract.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Infrastructure\OptionalFieldAttribute.cs" />
+    <Compile Include="Interfaces\IOrderRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Order.cs" />
