--- a/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess/OrderManagement.DataAccess.csproj
+++ b/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess/OrderManagement.DataAccess.csproj
@@ -41,14 +41,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdoAbstractRepository.cs" />
+    <Compile Include="DbDataReaderExtension.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OrderManagement.DataAccess.Contract\OrderManagement.DataAccess.Contract.csproj">
       <Project>{23c509b3-dc9a-46a0-8699-e90b5b8be23f}</Project>
       <Name>OrderManagement.DataAccess.Contract</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
