--- a/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess/OrderManagement.DataAccess.csproj
+++ b/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess/OrderManagement.DataAccess.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AdoAbstractRepository.cs" />
     <Compile Include="DbDataReaderExtension.cs" />
+    <Compile Include="OrderDetailRepository.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
