--- a/Module-5/OrderManagement/Sandbox/Sandbox.csproj
+++ b/Module-5/OrderManagement/Sandbox/Sandbox.csproj
@@ -36,6 +36,9 @@
     <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\OrderManagement\packages\Dapper.2.0.30\lib\net461\Dapper.dll</HintPath>
     </Reference>
+    <Reference Include="DapperExtensions, Version=1.6.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DapperExtensions.1.6.3\lib\net45\DapperExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,10 +57,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OrderManagement.DataAccess.Contract\OrderManagement.DataAccess.Contract.csproj">
-      <Project>{b29265e3-db04-42cd-8aa9-021c75db48e6}</Project>
-      <Name>OrderManagement.DataAccess.Contract</Name>
-    </ProjectReference>
     <ProjectReference Include="..\OrderManagement.DataAccess\OrderManagement.DataAccess.csproj">
       <Project>{141a85db-bb9c-455a-b730-f6f79729a5f9}</Project>
       <Name>OrderManagement.DataAccess</Name>
