--- a/Module-7/Crawler/Crawler/Crawler/Crawler.csproj
+++ b/Module-7/Crawler/Crawler/Crawler/Crawler.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.14.0" />
+    <PackageReference Include="CommandLineParser" Version="2.7.82" />
+  </ItemGroup>
+
 </Project>
